# tt_stats_app

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py
src/collectors/: event_collector.py  event_matches_collector.py
src/utils/: api_client.py  helper_logic.py  io_handler.py  raw_data_reporter.py  routes.py
tests/: conftest.py  test_io_handler.py
tests/integration/collectors/: test_wtt_api_event_matches.py  test_wtt_api_events.py
tests/unit/collectors/: test_event_collector.py
tests/unit/utils/: test_event_collector.py  test_helper_logic.py  test_io_handler.py
